setup folders + add sources

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
-<h1>
-  {{title}}
-</h1>
+<body>
+  <header>
+    <app-header></app-header>
+  </header>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
+  <footer class="page-footer blue darken-3">
+    <app-footer></app-footer>
+  </footer>
+</body>
