News page + Router added

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,8 +3,7 @@
     <div class="container">
     <a href="#" class="brand-logo">Global News Media</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a href="#">Contact</a></li>
-      <li><a href="#">About</a></li>
+      <li><a href="#">Settings</a></li>
     </ul>
     </div>
   </div>
