--- a/src/app/choice/choice.component.html
+++ b/src/app/choice/choice.component.html
@@ -2,13 +2,9 @@
 	<div class="row" id="agents">
 		<form>
 			<div class="row">
-				<!--<div class="card small" *ngFor="let agent of agents;">
-					{{agent.name}}
-					<img class="list-icons" [src]="agent.urlsToLogos.small" alt="">
-				</div>-->
-				<div class="col s12 m6 l3" *ngFor="let agent of agents;">
+				<div class="col s12 m6 l3" *ngFor="let agent of agents | slice:0:40">
 					<div class="card small">
-						<div class="card-image" style="min-height:20%">
+						<div class="card-image" style="height:20%">
 							<img style="max-width:20%" [src]="agent.urlsToLogos.small" alt="">
 						</div>
 						<div class="card-stacked">
@@ -17,7 +13,13 @@
 								<p>{{agent.description | limit}}</p>
 							</div>
 							<div class="card-action">
-								<a href="#">This is a link</a>
+								<div class="switch">
+									<label>
+									Off
+									<input name="agent.id" type="checkbox" [checked]="sources[agent.id]" [value]="sources[agent.id]" (change)="select(agent.id)">
+									<span class="lever"></span>
+									</label>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -25,7 +27,10 @@
 			</div>
 			<div class="row">
 				<div class="col s12 center-align">
-					<a class="waves-effect waves-light btn blue darken-3"><i class="material-icons right">send</i>Continue</a>
+					<a class="waves-effect waves-light btn blue darken-3" (click)="goToNews()" [ngClass]="{disabled : !atLeastOne()}">
+						<i class="material-icons right">send</i>
+						Continue
+					</a>
 				</div>
 			</div>
 		</form>
