routes in header

--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -15,7 +15,7 @@
             <i>By {{article.author}}.</i>
             <br>{{article.description}}
           </p>
-          <a href="#!" class="secondary-content">
+          <a href="http://twitter.com/home/?status={{article.title}}" target="_blank" class="secondary-content">
             <i class="material-icons">share</i>
           </a>
         </li>
