--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,13 @@
   <div class="nav-wrapper blue darken-3">
     <div class="container">
       <a [routerLink]="['/news']" class="brand-logo">Global News Media</a>
+      <a [hidden]="hideSettings" href="#" data-activates="sidenav" class="button-collapse" materialize="sideNav" [materializeParams]="[{closeOnClick: true}]">
+        <i class="material-icons">menu</i>
+      </a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li [hidden]="hideSettings"><a [routerLink]="['/settings', { data: true }]">Settings</a></li>
+      </ul>
+      <ul class="side-nav" id="sidenav">
         <li [hidden]="hideSettings"><a [routerLink]="['/settings', { data: true }]">Settings</a></li>
       </ul>
     </div>
